<resources>
    <string name="app_name">ECom</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="menu_item_cart">Cart</string>
    <string name="product_filter">Search</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="select_address">Select a delivery address</string>
    <string name="add_new_address">Add More</string>
    <string name="checkout">Select Delivery Address</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="edit_address">Edit Address</string>
    <string name="final_amount">Final Amount</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_mrp">Total MRP (Inc. Taxes)</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="remove">Remove</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="order_total_detail">Click here for details</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="house_no">House Number</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="quantity">Qty: %1$s</string>
    <string name="Favorite">favorite</string>
    <string name="add_address">Add Address</string>
    <string name="check_delivery">Check Delivery</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="savings">You\'re saving %1$s%2$s on this order</string>
    <string name="title_action_bar_home">Zypp Store</string>
    <string name="title_action_bar_product_detail">Product Detail</string>
    <string name="title_action_bar_cart">Cart</string>
    <string name="title_action_bar_favorite">Favorites</string>
    <string name="title_action_bar_delivery_details">Delivery Details</string>
    <string name="title_action_bar_add_delivery_details">Add Details</string>
    <string name="title_action_bar_edit_delivery_details">Edit Details</string>
</resources>
