<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/labelOrderSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_summary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelTotalMrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_mrp"
                app:layout_constraintEnd_toStartOf="@+id/textViewTotalMrp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/labelOrderSummary" />

            <TextView
                android:id="@+id/textViewTotalMrp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="150"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/labelTotalMrp"
                app:layout_constraintTop_toTopOf="@+id/labelTotalMrp" />

            <TextView
                android:id="@+id/labelShippingCharges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shipping_charges"
                app:layout_constraintEnd_toStartOf="@+id/textViewShippingCharges"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/labelTotalMrp" />

            <TextView
                android:id="@+id/textViewShippingCharges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Free"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/labelShippingCharges"
                app:layout_constraintTop_toTopOf="@+id/labelShippingCharges" />

            <TextView
                android:id="@+id/labelPayableAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/payable_amount"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewPayableAmount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/labelShippingCharges" />

            <TextView
                android:id="@+id/textViewPayableAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="150"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/labelPayableAmount"
                app:layout_constraintTop_toTopOf="@+id/labelPayableAmount" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="8dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>